--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,57 @@
         android:theme="@style/Theme.MedScan"
         tools:replace="android:supportsRtl">
         <activity
-            android:name=".eyes.eyes_menu"
+            android:name=".chat.chat_useer"
             android:exported="true"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.eyes_successful"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.uveitis"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.glaucoma"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.crossed_eyes"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.cataract"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.bulging_eyes"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.glaucoma_info"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.uveitis_info"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.crossed_eyes_info"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.cataract_info"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.bulging_eyes_info"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".eyes.eyes_menu"
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".kidneys.kidney_failed_advice"
             android:exported="true"
@@ -138,10 +186,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".chat.chat_home"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".chat.chat_user"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
