--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,23 +31,24 @@ android {
     buildFeatures{
         viewBinding true
     }
+    namespace 'com.example.medscan'
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
-    implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'com.google.firebase:firebase-firestore:24.1.1'
+    implementation 'com.google.firebase:firebase-firestore:24.1.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
-    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.facebook.android:facebook-android-sdk:13.1.0'
     implementation 'com.google.firebase:firebase-database'
 
@@ -65,6 +66,13 @@ dependencies {
     implementation'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
     implementation'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor'com.github.bumptech.glide:compiler:4.8.0'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    implementation'com.android.volley:volley-cronet:1.2.1'
 
 
 
